# cmux

./: .coderabbit.yaml  .dockerignore  .env.vibeshield.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .snyk  .swiftformat  .vercelignore  .wscrl-reorder-spec.md  AGENTS.md  AI_NAMING_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sh  GITHUB_ACTIONS_SYNC.md  GhosttyKit 2.xcframework  INDEX.md  LICENSE  LICENSE_SCOPE.md  PLAN.md  PROJECTS.md  Package.resolved  Package.swift  README.ar.md  README.bs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  (+45 more)
Native/DiffSidecar/: Cargo.toml  README.md  rust-toolchain.toml
Native/DiffSidecar/src/: benchmark.rs  lib.rs  main.rs  protocol.rs  server.rs  trajectory.rs
Native/DiffSidecar/tests/: server_integration.rs  trajectory.rs
Native/DiffSidecar/tests/support/: test_host.rs
Native/cmux-iroh/: Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
Native/cmux-iroh/src/: lib.rs
apps/server/native/core/: Cargo.toml  package.json
avm/: Cargo.toml
avm/src/: detector.rs  governor.rs  main.rs  policy.rs  proxy.rs  registry.rs  server.rs  shell.rs
cmux-tui/crates/cmux-relay/: Cargo.toml
cmux-tui/crates/cmux-relay/src/: admission.rs  config.rs  lib.rs  main.rs  relay.rs  ticket.rs
cmux-tui/crates/cmux-remote/: Cargo.toml
cmux-tui/crates/cmux-remote-protocol/: Cargo.toml
cmux-tui/crates/cmux-remote-protocol/src/: frame.rs  lib.rs  relay.rs  rpc.rs
cmux-tui/crates/cmux-remote/src/: admin.rs  bridge.rs  client.rs  connection.rs  crypto.rs  daemon.rs  identity.rs  lib.rs  link.rs  mux_codec.rs  mux_input.rs  mux_lanes.rs  observability.rs  service.rs  services.rs  session.rs  ssh_bootstrap.rs
cmux-tui/crates/cmux-remote/tests/: direct_ws_e2e.rs  relay_e2e.rs
cmux-tui/crates/cmux-tree/: Cargo.toml
cmux-tui/crates/cmux-tree/src/: app.rs  codex.rs  config.rs  localization.rs  main.rs  model.rs  trajectory.rs  ui.rs
cmux-tui/crates/cmux-tui/: Cargo.toml
cmux-tui/crates/cmux-tui-machine-agent-protocol/: Cargo.toml
cmux-tui/crates/cmux-tui-machine-agent-protocol/src/: lib.rs
cmux-tui/crates/cmux-tui/src/: app.rs  browser_input.rs  cli.rs  client_registration.rs  config.rs  host_colors.rs  keys.rs  localization.rs  machine.rs  machine_provider_client.rs  machine_provider_runtime.rs  machine_provider_transport.rs  machine_runtime.rs  main.rs  plugin_manager.rs  process_diagnostics.rs  provider_authority.rs  pty_input.rs  remote_cli.rs  remote_runtime.rs  server_lifecycle.rs
cmux-tui/crates/cmux-tui/tests/: cli.rs  terminal_host_mode.rs  terminal_host_recovery.rs
cmux-tui/crates/ghostty-vt/: Cargo.toml
cmux-tui/crates/ghostty-vt/src/: key.rs  kitty.rs  lib.rs  mouse.rs  render.rs  scene.rs  terminal.rs
cmux-tui/crates/ghostty-vt/tests/: kitty_graphics.rs  png_compat.rs  render_scene.rs  render_v7.rs  terminal.rs
cmux-tui/relays/cloudflare-do/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
cmux-tui/relays/cloudflare-do/src/: abuse.rs  attachment.rs  auth.rs  circuit.rs  lib.rs  (+3 more)
daemon/codex-lite/: .gitignore  Cargo.toml  README.md
daemon/codex-lite/src/: agent.rs  main.rs  openai_ws.rs  output_store.rs  server.rs  storage.rs  tools.rs  tui.rs
embedder/: BUILD.gn  CHANGELOG.md  README.md  cmux_BUILD.gn  cmux_browser.h  cmux_browser.mm  cmux_framework_main.cc  cmux_helper_main_mac.cc  cmux_layer_host.mm  cmux_profile.cc  cmux_session.cc  cmux_view.cc
embedder/branding/: cmux_core_framework-Info.plist  cmux_helper-Info.plist
linux/: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-appimage.sh  package-deb.sh  package-flatpak.sh  package-rpm.sh  package.sh
linux/.claude/reviews/: 2026-03-05-linux-port-hardening-round1.md  2026-03-05-linux-port-hardening-round2.md  2026-03-05-linux-port-hardening-round3.md  2026-03-05-linux-port-hardening-summary.md
linux/cmux/: Cargo.toml  build.rs
linux/cmux-cli/: Cargo.toml
linux/cmux-cli/src/: main.rs
linux/cmux-core/: Cargo.toml
linux/cmux-core/src/: agent.rs  hooks.rs  lib.rs  session.rs  storage.rs  terminal.rs
linux/cmux-gtk/: Cargo.toml
linux/cmux-gtk/src/: main.rs  notifications.rs
linux/cmux/src/: app.rs  main.rs  notifications.rs
linux/docs/: architecture-review.md  ubuntu-mvp-spec.md
linux/ghostty-gtk/: Cargo.toml
linux/ghostty-gtk/src/: app.rs  callbacks.rs  keys.rs  lib.rs  surface.rs
linux/ghostty-sys/: Cargo.toml  build.rs
linux/ghostty-sys/src/: lib.rs
linux/lib/cmux_linux/: __init__.py  __main__.py  app.py  auth.py  browser.py  capabilities.py  cli.py  feed.py  feedback.py  legacy_v1.py  remote.py  shortcuts.py  socket_security.py  terminal.py  workspace.py
linux/share/applications/: com.cmuxterm.cmux.desktop
linux/tools/: mock_feedback_server.py  package_manifest.py  socket_method_parity.py  socket_smoke.py  validate_linux_contract.py  validate_package.py  write_package_manifest.py
mux/: Cargo.toml  README.md
mux/bindings/: RELEASING.md  generate.sh
mux/bindings/conformance/: e2e.sh  fixtures.json  runner.py
mux/bindings/go/: README.md  client.go  events.go  types.go
mux/bindings/java/: README.md
mux/bindings/python/: e2e.py  pyproject.toml
mux/bindings/rust/: Cargo.toml  README.md
mux/bindings/styles/: python.md  rust.md
mux/bindings/typescript/: README.md  package-lock.json  package.json
mux/crates/ghostty-vt-sys/: build.rs
mux/crates/mux-cdp/: Cargo.toml
mux/crates/mux-core/: Cargo.toml
mux/crates/mux-tui/: Cargo.toml
mux/docs/: README.md  browser-panes.md  concepts.md  configuration.md  getting-started.md  keyboard.md  mouse.md  protocol.md
mux/scripts/: measure-frames.py  smoke-attach.py  smoke-tui.py
mux/scripts/hooks/: claude-code-hook.sh
mux/spec/: README.md  bindings.md  cli.md  commands.md  events.md  plugins.md  transports.md
native/cmux-iroh/: Cargo.toml
native/cmux-iroh/include/: cmux_iroh_ffi.h  module.modulemap
native/cmux-iroh/src/: lib.rs
tools/cmux-home/rust/: Cargo.toml
(+11933 files in other folders)
