# Copyright 2026 manaflow-ai. All rights reserved.
#
# //cmux/BUILD.gn (NOT //cmux/embedder/BUILD.gn — see embedder/README.md)
#
# Declares the cmux_core_framework target that the cmux macOS app
# (Packages/CmuxBrowserEngine) links against. When the cmux Chromium
# fork lands at manaflow-ai/cmux-chromium, this file drops into
# src/cmux/BUILD.gn as-is.
#
# Shape mirrors upstream's chrome_framework + chrome_helper_app pattern
# in chrome/BUILD.gn, but with cmux branding.
#
# Validation status (M148, 2026-05-14): this file, dropped into
# src/cmux/BUILD.gn on a chromium-fork tree with a one-line addition
# to root //BUILD.gn's gn_all group, passes:
#
#   gn gen out/cmux-check --args='target_os="mac" ...'      (27,405 targets)
#   gn check out/cmux-check //cmux:cmux_core_framework      (OK)
#   gn check out/cmux-check //cmux:cmux_helper_app_default  (OK)
#   gn check out/cmux-check //cmux:cmux_helper_app_renderer (OK)
#   gn check out/cmux-check //cmux:cmux_helper_app_gpu      (OK)
#   gn check out/cmux-check //cmux:cmux_helper_app_plugin   (OK)
#   gn check out/cmux-check //cmux:cmux_helpers             (OK)
#
# Header dependency check passes for every target this file defines,
# against the real M148 stable graph. The remaining unverified piece
# is ninja-linking the framework end-to-end (deferred until //content
# wiring lands).

import("//build/buildflag_header.gni")
import("//build/config/apple/symbols.gni")
import("//build/config/mac/mac_sdk.gni")
import("//build/config/mac/rules.gni")
import("//build/util/process_version.gni")
import("//content/public/app/mac_helpers.gni")

# Version: cmux's framework version is upstream Chromium's marketing
# version with a `.cmux.N` suffix bumped per fork release.
cmux_core_framework_version = "0.1.cmux.0"
cmux_core_framework_bundle_id = "ai.manaflow.cmux.browser.framework"

# Base name for helper apps. The output is `cmux_helper_name + helper
# app-name suffix`, so the default helper becomes "cmux Helper" and
# the renderer helper becomes "cmux Helper (Renderer)".
cmux_helper_name = "cmux Helper"

# Inlined equivalent of chrome/BUILD.gn's `chrome_helper_app` template,
# wired to cmux branding. The template lives here (not in a .gni)
# because cmux only has one consumer (this file).
template("cmux_helper_app") {
  mac_app_bundle(target_name) {
    assert(defined(invoker.helper_name_suffix))
    assert(defined(invoker.helper_bundle_id_suffix))

    output_name = cmux_helper_name + invoker.helper_name_suffix

    info_plist = "//cmux/branding/cmux_helper-Info.plist"

    extra_substitutions = [
      "CMUX_HELPER_BUNDLE_ID=${cmux_core_framework_bundle_id}${invoker.helper_bundle_id_suffix}",
      "CMUX_HELPER_NAME=${cmux_helper_name}${invoker.helper_name_suffix}",

      # mac_helpers.gni does not provide a CFBundlePackageType
      # variant. Chrome hard-codes APPL for every helper; cmux does
      # the same. (See chrome/app/helper-Info.plist.)
      "CMUX_PACKAGE_TYPE=APPL",
    ]

    # Real cmux mac helper entry point lands here once the .cc file
    # is added to //cmux/embedder. For now this is a placeholder
    # comment so a future `gn gen` doesn't blow up on an empty
    # sources list (mac_app_bundle requires at least one source).
    sources = [ "//cmux/embedder/cmux_helper_main_mac.cc" ]

    defines = [ "HELPER_EXECUTABLE" ]

    deps = [
      "//base/allocator:early_zone_registration_apple",
      "//content/public/app",
      "//sandbox/mac:seatbelt",
    ]
  }
}

# Instantiate the four helper variants from
# //content/public/app/mac_helpers.gni. Each `helper_params` tuple is
# [target_name, bundle_id_suffix, app_name_suffix] -- a 3-element list.
# GN's foreach binds the whole tuple to the loop variable; element
# access is by index, not destructuring.
foreach(helper_params, content_mac_helpers) {
  cmux_helper_app("cmux_helper_app_${helper_params[0]}") {
    helper_name_suffix = helper_params[2]
    helper_bundle_id_suffix = helper_params[1]
  }
}

# Group target the framework data-deps on. Names match what the
# foreach above generates (cmux_helper_app_default, _renderer, _gpu,
# _plugin).
group("cmux_helpers") {
  public_deps = []
  foreach(helper_params, content_mac_helpers) {
    public_deps += [ ":cmux_helper_app_${helper_params[0]}" ]
  }
}

# The framework itself.
mac_framework_bundle("cmux_core_framework") {
  output_name = "CmuxCore"
  framework_version = cmux_core_framework_version
  framework_contents = [
    "Frameworks",
    "Helpers",
    "Libraries",
    "Resources",
  ]
  info_plist = "//cmux/branding/cmux_core_framework-Info.plist"

  extra_substitutions = [
    "CMUX_CORE_FRAMEWORK_BUNDLE_ID=${cmux_core_framework_bundle_id}",
    "CMUX_CORE_FRAMEWORK_VERSION=${cmux_core_framework_version}",
  ]

  # Real sources come from //cmux/embedder once the .mm/.cc files land.
  # mac_framework_bundle does not allow an empty sources list; this
  # placeholder file gives the linker something concrete to consume.
  sources = [ "//cmux/embedder/cmux_framework_main.cc" ]

  # NOTE: stub framework deps. Real //mojo + //services/network/...
  # wiring lands once the C ABI implementations move beyond sentinels;
  # //mojo as a top-level alias is testonly, so granular subtargets
  # (//mojo/public/cpp/bindings, //services/network/public/mojom:mojom)
  # come back at that point.
  deps = [
    "//cmux/embedder:embedder",
    "//content/public/app",
  ]

  data_deps = [ ":cmux_helpers" ]

  ldflags = [ "-Wl,-install_name,@executable_path/../Frameworks/CmuxCore.framework/Versions/A/CmuxCore" ]
}
