[package]
name = "cmux-iroh"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false
description = "Minimal blocking C FFI over iroh for the cmux mobile transport (built into CmuxIrohFFI.xcframework by scripts/ensure-cmux-iroh.sh)"

[lib]
name = "cmux_iroh_ffi"
# staticlib ONLY: adding "rlib" silently disables fat LTO for the staticlib
# artifact, which balloons it from ~15 MB to ~112 MB per slice. The FFI seam
# tests live in src/ as unit tests (tests/ integration tests would need an
# rlib).
crate-type = ["staticlib"]

[dependencies]
# Pinned exactly: 1.0.0-rc.1 is the newest published iroh as of 2026-06-11 and
# the version the FFI spike proved (experiments/iroh-swift-ffi-spike). Bump
# deliberately and re-run the spike proof, see README.md.
iroh = "=1.0.0-rc.1"
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
