[package]
name = "cmux-codex-lite"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
futures-util = "0.3"
hex = "0.4"
http = "1.2"
http-body-util = "0.1"
hyper = "1.9"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
memchr = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.16"
