[package]
name = "cmux-gtk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
gio = "0.20"
glib = "0.20"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
cmux-core = { path = "../cmux-core" }

[lints]
workspace = true
