[package]
name = "ghostty-gtk"
version = "0.1.0"
edition.workspace = true
description = "Safe Rust wrapper around libghostty for GTK4 integration"

[features]
link-ghostty = ["ghostty-sys/link-ghostty"]

[dependencies]
ghostty-sys = { path = "../ghostty-sys" }
gtk4 = { workspace = true }
glib = { workspace = true }
gdk4 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
