[package]
name = "cmux-relay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Self-hosted WebSocket relay for encrypted cmux remote circuits"

[lints]
workspace = true

[[bin]]
name = "cmux-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
cmux-remote-protocol.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
