[package]
name = "cmux-remote-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Provider-neutral wire and workspace protocol for cmux remote sessions"

[lints]
workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
