[package]
name = "cmux-tui-machine-agent-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
