[package]
name = "ghostty-vt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Safe Rust wrapper around libghostty-vt"

[lints]
workspace = true

[dependencies]
base64.workspace = true
ghostty-vt-sys.workspace = true
png.workspace = true
