[package]
name = "cmux-home-ratatui"
version = "0.1.0"
edition = "2021"
description = "Rust/Ratatui prototype for cmux home"
license = "MIT"

[[bin]]
name = "cmux-home"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
