[package]
name = "cmux_native_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
anyhow = "1"
rayon = "1.10"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
similar = "2"
globset = "0.4"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
