[package]
name = "cmux-cli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Terminal model and state for the cmux-cli multiplexer."

[dependencies]
cmux-cli-protocol = { path = "../cmux-cli-protocol" }
libghostty-vt = { workspace = true }
portable-pty = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
